@@ -76,6 +76,8 @@ Changes in version 0.2.0.13-alpha - 2007-12-??
       in really weird results on platforms whose sys/types.h files define
       nonstandard integer types.
     - Fix compilation with --disable-threads set.
+    - Authorities decide whether they're authoritative for a given router
+      based on the router's purpose.
 
   o Minor features:
     - On USR1, when dmalloc is in use, log the top 10 memory
